--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </section>
       <section id="controls">
         <button @click="attackMonster">ATTACK</button>
-        <button>SPECIAL ATTACK</button>
+        <button @click="specialAttackMonster" :disabled="mayUseSpecialAttack">SPECIAL ATTACK</button>
         <button>HEAL</button>
         <button>SURRENDER</button>
         
